[gd_scene load_steps=20 format=2]

[ext_resource path="res://objects/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/Floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/FloorSpawner.gd" type="Script" id=3]
[ext_resource path="res://scripts/Camera.gd" type="Script" id=4]
[ext_resource path="res://font/Poppins-Light.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scripts/CoinSpawner.gd" type="Script" id=6]
[ext_resource path="res://ui/Pause.png" type="Texture" id=7]
[ext_resource path="res://scripts/Main.gd" type="Script" id=8]
[ext_resource path="res://scripts/GameOverArea.gd" type="Script" id=9]
[ext_resource path="res://ui/Theme.png" type="Texture" id=10]
[ext_resource path="res://ui/Shop.png" type="Texture" id=11]
[ext_resource path="res://ui/Exit.png" type="Texture" id=12]
[ext_resource path="res://objects/Coin.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 38
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=12]

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="BoxShape" id=11]

[node name="Main" type="Spatial"]
script = ExtResource( 8 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 10, 20, 10 )
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="FloorSpawner" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Floor" parent="FloorSpawner" instance=ExtResource( 2 )]

[node name="CoinSpawner" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Coin" parent="CoinSpawner" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5 )
visible = false

[node name="CenterControl" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestScore" type="Control" parent="CenterControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterControl/BestScore"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.0
margin_top = -20.0
margin_right = 61.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 7 )
text = "Best: 826453"
align = 1
valign = 1

[node name="Button" type="Control" parent="CenterControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = 210.0
margin_right = 20.0
margin_bottom = 250.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy" type="Button" parent="CenterControl/Button"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.5
margin_top = -32.5
margin_right = 32.5
margin_bottom = 32.5
rect_scale = Vector2( 1.1, 1.1 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 11 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="CenterControl/Button"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 47.5
margin_top = -32.5
margin_right = 112.5
margin_bottom = 32.5
rect_scale = Vector2( 1.1, 1.1 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 12 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Theme" type="Button" parent="CenterControl/Button"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.5
margin_top = -32.5
margin_right = -47.5
margin_bottom = 32.5
rect_scale = Vector2( 1.1, 1.1 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 10 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="CenterControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -270.0
margin_right = 20.0
margin_bottom = -179.0
custom_fonts/font = SubResource( 8 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="CenterControl"]
pause_mode = 2
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -120.0
margin_right = 150.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterControl/PlayButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = -28.5
margin_right = 118.0
margin_bottom = 28.5
custom_fonts/font = SubResource( 9 )
text = "Tap to Play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="CenterControl"]
pause_mode = 2
visible = false
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -120.0
margin_right = 150.0
margin_bottom = 40.0
focus_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterControl/ResumeButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -154.5
margin_top = -30.0
margin_right = 154.5
margin_bottom = 30.0
custom_fonts/font = SubResource( 9 )
text = "Game Paused"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="CenterControl"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -120.0
margin_right = 150.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterControl/RestartButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -133.5
margin_top = -28.5
margin_right = 133.5
margin_bottom = 28.5
custom_fonts/font = SubResource( 9 )
text = "Tap to Restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin" type="Control" parent="."]
margin_right = 30.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Coin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 132.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 10 )
text = "Cube: 324242"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverArea" type="Area" parent="."]
collision_layer = 8
script = ExtResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="GameOverArea"]
transform = Transform( 5, 0, 0, 0, 0.5, 0, 0, 0, 5, 0, 0, 0 )
shape = SubResource( 11 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.496732, 0.819152, -0.286788, 0.5, -2.18557e-08, 0.866025, 0.709407, -0.573577, -0.409576, 0, 7.567, 0 )
shadow_enabled = true

[node name="Pause" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="Button" parent="Pause"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -61.0
margin_top = 10.0
margin_bottom = 61.0
rect_scale = Vector2( 0.8, 0.8 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="CenterControl/Button/Buy" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="CenterControl/Button/Exit" to="." method="_on_Exit_button_down"]
[connection signal="button_down" from="CenterControl/Button/Theme" to="." method="_on_Theme_button_down"]
[connection signal="button_down" from="CenterControl/PlayButton" to="." method="_on_PlayButton_button_down"]
[connection signal="button_down" from="CenterControl/ResumeButton" to="." method="_on_ResumeButton_button_down"]
[connection signal="button_down" from="CenterControl/RestartButton" to="." method="_on_RestartButton_button_down"]
[connection signal="body_entered" from="GameOverArea" to="GameOverArea" method="_on_GameOverArea_body_entered"]
[connection signal="button_down" from="Pause/PauseButton" to="." method="_on_PauseButton_button_down"]
